# FantaCalcGui

./: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  FantaCalcGuiNew_QT4.cmake  FantaCalcGuiNew_QT5.cmake  FlowDiagram.pptx  bug_module_error.txt  classDiagram.uml  notepad++_diff.sh  notepad++_diff_7.sh  resources.qrc
.externalToolBuilders/: org.eclipse.cdt.codan.core.codanBuilder.launch
TestFiles/: gazzetta_1516_1.txt  new_quotazioni_gazzetta_02.xls  real_patelavache_12.txt
installer/: Setup.nsi  Setup_EPTADONE.nsi  Setup_QT5_Win32.nsi  Setup_VORTICE.nsi
src/: CVersion.cpp  CVersion.h  ChooseFileFromAListDialog.cpp  ChooseFileFromAListDialog.h  ChooseFiles.cpp  ChooseFiles.h  ChooseFiles.ui  DownloadManager.ui  Downloader.cpp  Downloader.h  FCGTest.cpp  FCGTest.moc  Fanta.cpp  Fanta.h  FileFormazioniReader.cpp  FileFormazioniReader.h  FileFormazioniViewer.cpp  FileFormazioniViewer.h  FileFormazioniViewer.ui  FormazioniFileReader.cpp  FormazioniFileReader.h  GazzettaFileReader.cpp  GazzettaFileReader.h  IniFileManager.cpp  IniFileManager.h  IniFilePopulator.cpp  IniFilePopulator.h  IniFilePopulator.ui  Less25MinDialog.cpp  Less25MinDialog.h  Logger.cpp  Logger.h  Logger.ui  Makefile  MatchChooserCamp.cpp  MatchChooserCamp.h  MatchChooserCamp.ui  MatchChooserCoppa.cpp  MatchChooserCoppa.h  MatchChooserCoppa.ui  (+51 more)
src/Test/: Makefile  main.cpp  test  test.cpp  test.h  test.pro  testqstring.cpp
src/TestFiles/: 12.txt
